    is installed in the /usr/local hierarchy), a definition of the
    AM_PROG_VALAC macro found in '/usr/local/share/aclocal/my-vala.m4'
    should take precedence over the same-named automake-provided macro
    (defined in '/usr/local/share/aclocal-2.0/vala.m4').

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New in 1.14.1:

* Bugs fixed:

  - Fixed a gross inefficiency in the recipes for installing byte-compiled
    python files, that was causing an O(N^2) performance on the number N of
    files, instead of the expected O(N) performance.  Note that this bug
    was only relevant when the number of python files was high (which is
    unusual in practice).

  - The 'test-driver' script now actually error out with a clear error
    message on the most common invalid usages.

  - Several spurious failures/hangs in the testsuite (bugs #14706, #14707,
    #14760, #14911, #15181, #15237).

* Documentation fixes:

  - Fixed typos in the 'fix-timestamp.sh' example script that made it
    nonsensical.

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New in 1.14:

* C compilation, and the AC_PROG_CC and AM_PROG_CC_C_O macros:

  - The 'compile' script is now unconditionally required for all packages
    that perform C compilation (if you are using the '--add-missing'
    option, automake will fetch that script for you, so you shouldn't
    need any explicit adjustment).  This new behaviour is needed to avoid
    obscure errors when the 'subdir-objects' option is used, and the
    compiler is an inferior one that doesn't grasp the combined use of
    both the "-c -o" options; see discussion about automake bug#13378 for
    more details:
    <http://debbugs.gnu.org/cgi/bugreport.cgi?bug=13378#35>
    <http://debbugs.gnu.org/cgi/bugreport.cgi?bug=13378#44>

  - The next major Automake version (2.0) will unconditionally activate
    the 'subdir-objects' option.  In order to smooth out the transition,