@@ -35,7 +35,6 @@ t/gcj6.sh \
 t/override-conditional-2.sh \
 t/override-conditional-pr13940.sh \
 t/dist-pr109765.sh \
-t/distcheck-no-prefix-or-srcdir-override.sh \
 t/instdir-cond2.sh \
 t/java-nobase.sh \
 t/objext-pr10128.sh \
